// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.html - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- @prettier -->

Hello        World

=====================================output=====================================
<!-- @prettier -->

Hello World

================================================================================
`;

exports[`without-pragma.html - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
Hello        World

=====================================output=====================================
<!-- @format -->

Hello World

================================================================================
`;
